update _config.yml to point to direct url

--- a/_data/index/banners.yml
+++ b/_data/index/banners.yml
@@ -3,7 +3,7 @@
 #
 # Images are expected to be located in `static/assets/img/`.
 - src: landing/header_one.jpg
-  title: first banner image
+  title: Polymountain
 
-- src: landing/header_two.jpg
-  title: second banner image
+- src: landing/future_mango.gif
+  title: Polygon art
