--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects: GitHub, Motivation, HTML5, ReactJS, Machine Learing, Python, Sleeping
-percentage: 100, 35, 65, 80, 70, 90, 50
+aspects: GitHub, Machine Learning, Solidworks, Python, Communication, Matlab, Data Analytics
+percentage: 90, 85, 70, 85, 90, 75, 80
