--- a/_data/blog.yml
+++ b/_data/blog.yml
@@ -6,21 +6,21 @@
 - name: Python
   href: /python/
 
-- name: Linux
-  href: /linux/
+# - name: Linux
+#   href: /linux/
+#
+# - name: HTML
+#   href: /html/
+#
+# - name: Database
+#   href: /database/
+#
+# - name: Mac
+#   href: /mac/
 
-- name: HTML
-  href: /html/
+- name: Machine-learning
+  href: /machine-learning/
 
-- name: Database
-  href: /database/
-
-- name: Mac
-  href: /mac/
-
-- name: Life
-  href: /life/
-
-# Don't display donation page: change donation to off at file '_config.yml'
-- name: Donate
-  href: /donate/
+# # Don't display donation page: change donation to off at file '_config.yml'
+# - name: Donate
+#   href: /donate/
