--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,22 +1,22 @@
 # projects section data
 # If you don't have language feature(language.yml is empty), ignore "i18n" items
 # Suggest projects' img be located at '/static/assets/img/landing', and edit following img items.
-- name: Jalpc
-  i18n: jalpc
-  gh_user: jarrekk
-  repo: Jalpc
-  img: /static/assets/img/landing/jekyll.png
-  desc: This project is my project. I use javescript to get repo's information all my repos have only one request.
+- name: coinmarketcap-history
+  i18n: coinmarketcap-history
+  gh_user: Alescontrela
+  repo: coinmarketcap-history
+  img: /static/assets/img/landing/coins.png
+  desc: Asynchronously gather historical cryptocurrency data from Coinmarketcap.com.
 
-- name: Python
-  i18n: cpython
-  gh_user: python
-  repo: cpython
-  img: /static/assets/img/landing/python.png
-  desc: This project is other's project. I use another request to get repo's information.
+- name: NumPy-CNN
+  i18n: NumPy-CNN
+  gh_user: Alescontrela
+  repo: Numpy-CNN
+  img: /static/assets/img/landing/nn_icon.jpg
+  desc: A numpy-only implementation of a Convolutional Neural Network, from the ground up.
 
-- name: Google
-  i18n: google
-  url: https://google.com
-  img: /static/assets/img/landing/google.png
-  desc: This is another project.
+# - name: Google
+#   i18n: google
+#   url: https://google.com
+#   img: /static/assets/img/landing/google.png
+#   desc: This is another project.
