--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: Alejandro Escontrela
 description: Hi there. This is my blog, contact info, and project page.
 keywords: Alejandro,Escontrela,GitHub,ML,DL,Python
 baseurl:  /Ale # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
-url: https://alescontrela.github.io/Ale/  # url should be 'http://<github_username>.github.io/homepage' as before
+url: https://Alescontrela.github.io/Ale/  # url should be 'http://<github_username>.github.io/homepage' as before
 # url: http://127.0.0.1:4000
 img_path: /Ale/static/assets/img/blog  # url should be '/homepage/static/assets/img/blog' as before
 
@@ -15,7 +15,7 @@ author:  # change following line to your infomation.
   first_name: Alejandro  # Be used at index page about me section.
   last_name: Escontrela  # Be used at index page about me section.
   avatar: /static/assets/img/landing/avatar.jpg  # upload your avatar at directory and edit it.
-  github_username: alescontrela  # Leave blank if you don't have now
+  github_username: Alescontrela  # Leave blank if you don't have now
   linkedin_id: alejandro-escontrela # Leave blank if you don't have now
   facebook_username:   # Leave blank if you don't have now
   twitter_username:
