--- a/_data/index/banners.yml
+++ b/_data/index/banners.yml
@@ -3,7 +3,11 @@
 #
 # Images are expected to be located in `static/assets/img/`.
 - src: landing/header_one.jpg
+  background_color1: 000000
+  background_color2: 000000
   title: Polymountain
 
 - src: landing/future_mango.gif
+  background_color1: e9e9e9
+  background_color2: f1eff1
   title: Polygon art
