--- a/_data/index/banners.yml
+++ b/_data/index/banners.yml
@@ -11,3 +11,8 @@
   background_color1: e9e9e9
   background_color2: f1eff1
   title: Polygon art
+
+- src: landing/pistons_pumpin.gif
+  background_color1: 2a547c
+  background_color2: 2a547c
+  title: Polygon pistons
