--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ author:  # change following line to your infomation.
   desc: Hi there, I'm Alejandro, a Computer Science and Aerospace Engineering student interested in machine learning and intelligent systems. I sometimes write about my interests. # Describe yourself.
 
 # comment
-# disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your configuration; if not, comment following two lines.
-#   name: alejandroescontrela
+disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your configuration; if not, comment following two lines.
+  name: alejandroescontrela
 
 # analytics
 ## google analytics
