add google optimize snippet

--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ ga:  # if you wanna this feature, go to https://www.google.com/analytics/ to get
 
 ## google optimize
 go:
-  # id:
+  id: GTM-K9BDM45
 
 ## growingIO
 gio:  # if you wanna this feature, go to https://www.growingio.com/ to get your configuration; if not, comment following line.
