--- a/_data/blog.yml
+++ b/_data/blog.yml
@@ -3,23 +3,14 @@
   href: /blog/
 
 # edit following lines to custom your blog page, make sure name is the same as href but capitalized first letter(except HTML)
-- name: Python
-  href: /python/
-
-# - name: Linux
-#   href: /linux/
-#
-# - name: HTML
-#   href: /html/
-#
-# - name: Database
-#   href: /database/
-#
-# - name: Mac
-#   href: /mac/
+- name: Data-structures
+  href: /data-structures/
 
 - name: Machine-learning
   href: /machine-learning/
+
+- name: Python
+  href: /python/
 
 # # Don't display donation page: change donation to off at file '_config.yml'
 # - name: Donate
