--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 title: Alejandro Escontrela
 description: Hi there. This is my blog, contact info, and project page.
 keywords: Alejandro,Escontrela,GitHub,ML,DL,Python
-baseurl:  /Ale # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
-url: https://escontrela.com  # url should be 'http://<github_username>.github.io/homepage' as before
+baseurl:  "" # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
+url: https://Alescontrela.github.io/Ale/  # url should be 'http://<github_username>.github.io/homepage' as before
 # url: http://127.0.0.1:4000
 img_path: /Ale/static/assets/img/blog  # url should be '/homepage/static/assets/img/blog' as before
 
