--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects: Machine Learning, Solidworks, Python, git, Communication, Matlab, Data Analytics, C++
-percentage: 85, 70, 85, 90, 90, 75, 80, 60
+aspects: Machine Learning, Solidworks, Deep Reinforcement Learning, Python, git, Communication, Matlab, Data Analytics, C++
+percentage: 85, 70, 55, 85, 90, 90, 75, 80, 60
