--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # Website settings
 title: Alejandro Escontrela
 description: Hi there. This is my blog, contact info, and project page.
-keywords: Alejandro,Escontrela,GitHub,ML,DL,Python
+keywords: Alejandro,Escontrela,GitHub,ML,DL,Python,Aerospace,Engineering
 baseurl:  "" # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
 url: https://Alescontrela.github.io/Ale/  # url should be 'http://<github_username>.github.io/homepage' as before
 # url: http://127.0.0.1:4000
