Add GitHub contributions to skills section.

--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -4,3 +4,4 @@ label: Ability
 id : cs
 aspects: Machine Learning, Solidworks, Deep Reinforcement Learning, Python, git, Communication, Matlab, Data Analytics, C++
 percentage: 85, 70, 55, 85, 90, 90, 75, 80, 60
+github_user: alescontrela
