--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ keywords: Alejandro,Escontrela,GitHub,ML,DL,Python,Aerospace,Engineering
 baseurl:  "" # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
 url: https://Alescontrela.github.io/Ale/  # url should be 'http://<github_username>.github.io/homepage' as before
 # url: http://127.0.0.1:4000
-img_path: /Ale/static/assets/img/blog  # url should be '/homepage/static/assets/img/blog' as before
+img_path: /static/assets/img/blog  # url should be '/homepage/static/assets/img/blog' as before
 
 # author -- index page "about me" section
 author:  # change following line to your infomation.
