--- a/_data/index/banners.yml
+++ b/_data/index/banners.yml
@@ -2,17 +2,34 @@
 # Add items for each banner image in the carousel
 #
 # Images are expected to be located in `static/assets/img/`.
-- src: landing/header_one.jpg
+- src: landing/jumping.mp4
   background_color1: 000000
   background_color2: 000000
-  title: Polymountain
+  time: 8000
+  title: Learning Agile Locomotion Skills with a Mentor
+  subtitle: Work performed with Google Brain, ICRA 2021
+  text_color: white
 
-- src: landing/future_mango.gif
+- src: landing/jessii.mp4
+  background_color1: 000000
+  background_color2: 000000
+  time: 60000
+  title: IGVC Autonomous Navigation Demo
+  subtitle: Work performed as RoboJackets Software Lead
+  text_color: white;
+
+- src: landing/cart_pole.mp4
   background_color1: e9e9e9
   background_color2: f1eff1
-  title: Polygon art
+  time: 8000
+  title: A Factor-Graph Approach for Optimization Problems with Dynamics Constraints
+  subtitle: Work performed at the Borglab (Advisor Frank Dellaert), ICRA 2021
+  text_color: black;
 
-- src: landing/pistons_pumpin.gif
+- src: landing/mountain.mp4
   background_color1: 2a547c
   background_color2: 2a547c
-  title: Polygon pistons
+  time: 30000
+  title: Zero-Shot Terrain Generalization for Visual Locomotion Policies
+  subtitle: Work performed with Google Brain, NeurIPS WS 2020 & ICRA 2021
+  text_color: white;
